# navtech

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Fruteira.stl  Makefile  README.md  SECURITY.md  codecov.yml  docker-compose.yaml  entrypoint.sh  package-lock.json  package.json  package.xml  robot-devices.rules  setup.py  steps
src/robot_description/: CMakeLists.txt  devices.rules  package.xml  setup.cfg  setup.py
src/robot_description/config/: base.yaml  navigation.yaml
src/robot_description/config/meshes/: base.dae
src/robot_description/config/robot/: base.yaml  navigation.yaml  robot.urdf.xacro
src/robot_description/config/rviz/: robot.rviz
src/robot_description/launch/: bringup.launch  bringup.launch.py  create.launch  devices.launch.py  devices.xml  interface.launch.py  interface.xml  load_robot.launch.py  load_robot.xml  robot.xml  simulation.xml
src/robot_description/meshes/: rplidar.dae
src/robot_description/robot/: robot.urdf.xacro
src/robot_description/rviz/: robot.rviz
src/robot_description/src/: laser_filter.py  odom.py
src/robot_description/src/robot_description/: create.py  laser_filter.py  odom.py
src/robot_description/test/: sensors.py
src/robot_description/urdf/macros/: link_geometry.urdf.xacro  properties_robot.urdf.xacro
src/robot_nav/: .gitignore  CMakeLists.txt  package.xml  setup.py
src/robot_nav/config/: my_laser_config.yaml  navigation.yaml
src/robot_nav/config/navigation/: costmap_common_params.yaml  costmap_global_params.yaml  costmap_local_params.yaml  global_planner_params.yaml  local_planner_base_params.yaml  (+4 more)
src/robot_nav/launch/: bringup_mapping.launch  bringup_mapping.launch.py  bringup_navigation.launch  bringup_navigation.launch.py  localization.xml  mapping.xml  navigation.xml  planning.xml
src/robot_nav/rviz/: mapping.rviz  navigation.rviz
src/robot_nav/src/: goThroughPoses.py  robot_navigator.py
src/robot_nav/test/: library.py  navigation.py  simulation.py
(+115 files in other folders)
