<?xml version="1.0"?>
<package format="2">

  <name>robot_description</name>
  <version>0.0.0</version>
  <description>The robot_description package</description>
  <maintainer email="nicolasalangrotti03@gmail.com">Nicolas Alan</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <url type="website"> </url>
  <author email="nicolasalangrotti03@gmail.com">Nicolas Alan</author>

  <buildtool_depend>catkin</buildtool_depend>

</package>